Corrected spelling of armour

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2388,7 +2388,7 @@
 							<table>
 								<tr>
 									<th colspan="3">
-										Harsh Realism - Armor Gaps
+										Harsh Realism - Armour Gaps
 									</th>
 								</tr>
 								<tr>
