--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -60,6 +60,9 @@
         <div class="header">
             <a class="item" data-tab="ranged">Ranged</a>
         </div>
+        <div class="header">
+            <a class="item" data-tab="armour">Armour</a>
+        </div>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -167,6 +170,170 @@
                     {{/each}}
                 </table>
             </div>
+        </div>
+
+        {{!-- Armour Tab --}}
+        <div class="tab stats" data-tab="armour" data-group="primary">
+            {{log data}}
+            <div class="tab">
+                <label>Body Type:</label>
+                <select name="data.armour.bodyType.name" class="bodyType">
+                    {{#select data.armour.bodyType.name}}
+                    <option value="">Make a Selection</option>
+                    <option value="humanoid">Humanoid</option>
+                    <option value="wingedHumanoid">Winged Humanoid</option>
+                    <option value="quadruped">Quadruped</option>
+                    <option value="wingedQuadruped">Winged Quadruped</option>
+                    <option value="hexapod">Hexapod</option>
+                    <option value="wingedHexapod">Winged Hexapod</option>
+                    <option value="centaur">Centaur</option>
+                    <option value="avian">Avian</option>
+                    <option value="vermiform">Vermiform</option>
+                    <option value="lamia">Lamia</option>
+                    <option value="wingedLamia">Winged Lamia</option>
+                    <option value="octopod">Octopod</option>
+                    <option value="cancroid">Cancroid</option>
+                    <option value="ichthyoid">Ichthyoid</option>
+                    <option value="arachnoid">Arachnoid</option>
+                    {{/select}}
+                </select>
+            </div>
+            <table>
+                <tr class="hit-locations">
+                    <td></td>
+                    <td></td>
+                    <td class="dr-damage-types">Burn</td>
+                    <td class="dr-damage-types">Cor</td>
+                    <td class="dr-damage-types">Cr</td>
+                    <td class="dr-damage-types">Cut</td>
+                    <td class="dr-damage-types">Fat</td>
+                    <td class="dr-damage-types">Imp</td>
+                    <td class="dr-damage-types">Pi</td>
+                    <td class="dr-damage-types">Tox</td>
+                    <td colspan="3" class="dr-damage-types"></td>
+                </tr>
+                <tr class="hit-locations">
+                    <td class="dr-header"></td>
+                    <td class="dr-header">Flex</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">DR/Hard</td>
+                    <td class="dr-header">HP</td>
+                    <td class="dr-header">State</td>
+                    <td class="dr-header">Penalty</td>
+                </tr>
+                {{#each actor.data.armour.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
+                <tr class="hit-locations master-location">
+                    <td colspan="10">{{bodyPart.label}}</td>
+                    {{#if bodyPart.hp}}
+                    <td class="dr-row">
+                        <input type="number" class="partHP" id="data.armour.bodyType.body.{{partId}}.hp" name="data.armour.bodyType.body.{{partId}}.hp.value" value="{{bodyPart.hp.value}}" data-dtype="Number" style="width: 50%;"/>
+                        <span style="width: 45%;">/{{bodyPart.hp.max}}</span></td>
+                    <td class="dr-row">{{bodyPart.hp.state}}</td>
+                    {{else}}
+                    <td class="dr-row" colspan="2"></td>
+                    {{/if}}
+                    <td class="dr-row penalty">{{bodyPart.penalty}}</td>
+                </tr>
+                {{#if bodyPart.subLocation}}<!--Check to see if there are sublocations and display them-->
+                {{#each bodyPart.subLocation as |subLocation locationId|}}<!--Loop through the sublocations-->
+                <tr class="hit-locations">
+                    <td class="dr-row">{{subLocation.label}}</td>
+                    <td class="dr-row">
+                        <input type="checkbox" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.flexible" {{checked subLocation.flexible}} data-dtype="Boolean" style="width: 100%;"/>
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRBurn" value="{{subLocation.personalDRBurn}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningBurn" value="{{subLocation.personalDRHardeningBurn}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRCor" value="{{subLocation.personalDRCor}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningCor" value="{{subLocation.personalDRHardeningCor}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRCr" value="{{subLocation.personalDRCr}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningCr"  value="{{subLocation.personalDRHardeningCr}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRCut" value="{{subLocation.personalDRCut}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningCut" value="{{subLocation.personalDRHardeningCut}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRFat" value="{{subLocation.personalDRFat}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningFat" value="{{subLocation.personalDRHardeningFat}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRImp" value="{{subLocation.personalDRImp}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningImp" value="{{subLocation.personalDRHardeningImp}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRPi" value="{{subLocation.personalDRPi}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningPi"  value="{{subLocation.personalDRHardeningPi}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRTox" value="{{subLocation.personalDRTox}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningTox" value="{{subLocation.personalDRHardeningTox}}" data-dtype="Number" />
+                    </td>
+                    {{#if subLocation.hp}}
+                    <td class="dr-row">
+                        <input type="number" class="partHP" id="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.hp" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.hp.value" value="{{subLocation.hp.value}}" data-dtype="Number" style="width: 50%;"/>
+                        <span style="width: 45%;">/{{subLocation.hp.max}}</span></td>
+                    <td class="dr-row">{{subLocation.hp.state}}</td>
+                    {{else}}
+                    <td class="dr-row" colspan="2"></td>
+                    {{/if}}
+                    <td class="dr-row penalty">{{subLocation.penalty}}</td>
+                </tr>
+                {{/each}}
+                {{else}}<!--Display details for parts without sublocations (Pretty much only the skull and brian)-->
+                <tr class="hit-locations">
+                    <td class="dr-row">{{bodyPart.label}}</td>
+                    <td class="dr-row">
+                        <input type="checkbox" name="data.armour.bodyType.body.{{partId}}.flexible" {{checked bodyPart.flexible}} data-dtype="Boolean" style="width: 100%;"/>
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRBurn" value="{{bodyPart.personalDRBurn}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningBurn" value="{{bodyPart.personalDRHardeningBurn}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRCor" value="{{bodyPart.personalDRCor}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningCor" value="{{bodyPart.personalDRHardeningCor}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRCr" value="{{bodyPart.personalDRCr}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningCr"  value="{{bodyPart.personalDRHardeningCr}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRCut" value="{{bodyPart.personalDRCut}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningCut" value="{{bodyPart.personalDRHardeningCut}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRFat" value="{{bodyPart.personalDRFat}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningFat" value="{{bodyPart.personalDRHardeningFat}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRImp" value="{{bodyPart.personalDRImp}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningImp" value="{{bodyPart.personalDRHardeningImp}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRPi" value="{{bodyPart.personalDRPi}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningPi"  value="{{bodyPart.personalDRHardeningPi}}" data-dtype="Number" />
+                    </td>
+                    <td class="dr-row">
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRTox" value="{{bodyPart.personalDRTox}}" data-dtype="Number" />
+                        <input type="number" name="data.armour.bodyType.body.{{partId}}.personalDRHardeningTox" value="{{bodyPart.personalDRHardeningTox}}" data-dtype="Number" />
+                    </td>
+                    <td colspan="2" class="dr-row"></td>
+                    <td class="dr-row penalty">{{bodyPart.penalty}}</td>
+                </tr>
+                {{/if}}
+                {{/each}}
+            </table>
         </div>
     </section>
 </form>
